--- a/static/css/post.less
+++ b/static/css/post.less
@@ -29,25 +29,25 @@
                 </div>
                 <ul class="post_share list__horizontal">
                     <li class="list_item">
-                        <a class="share-link" href="#">
+                        <a class="share-icon" href="#">
                             <i class="cf-icon cf-icon-email-social-square"></i>
                             <span class="visually-hidden">Share by email</span>
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="share-link" href="#">
+                        <a class="share-icon" href="#">
                             <i class="cf-icon cf-icon-facebook-square"></i>
                             <span class="visually-hidden">Share on Facebook</span>
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="share-link" href="#">
+                        <a class="share-icon" href="#">
                             <i class="cf-icon cf-icon-twitter-square"></i>
                             <span class="visually-hidden">Share on Twitter</span>
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="share-link" href="#">
+                        <a class="share-icon" href="#">
                             <i class="cf-icon cf-icon-linkedin-square"></i>
                             <span class="visually-hidden">Share on LinkedIn</span>
                         </a>
@@ -212,7 +212,7 @@
             .post_meta
               .post_byline
               .post_date
-            .post_share-link
+            .post_share-icon
             .post_featured-img
             .post_summary
             .post_body
