Simplifies post_inset margin css.

--- a/static/css/post.less
+++ b/static/css/post.less
@@ -257,11 +257,7 @@
     .u-respond-to-min(769px, {
         .u-right();
         width: unit(250px / @base-font-size-px, em);
-        margin:
-            unit(@gutter-width / @base-font-size-px, em)
-            0
-            unit(@gutter-width / @base-font-size-px, em)
-            unit(@gutter-width / @base-font-size-px, em);
+        margin-left: unit(@gutter-width / @base-font-size-px, em);
     });
 }
 
