Updates example tags text.

--- a/static/css/post.less
+++ b/static/css/post.less
@@ -201,17 +201,17 @@
                     <ul class="tags_list">
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
-                                cfpb
+                                Students
                             </a>
                         </li>
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
-                                cfpb
+                                Consumers
                             </a>
                         </li>
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
-                                cfpb
+                                College loans
                             </a>
                         </li>
                     </ul>
