--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4251,17 +4251,17 @@ img {
             <ul class="tags_list">
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
-                        cfpb
+                        Students
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
-                        cfpb
+                        Consumers
                     </a>
                 </li>
                 <li class="tags_tag">
                     <a href="#" class="tags_link">
-                        cfpb
+                        College loans
                     </a>
                 </li>
             </ul>
@@ -5069,17 +5069,17 @@ a.share-icon.active {
                     <ul class="tags_list">
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
-                                cfpb
+                                Students
                             </a>
                         </li>
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
-                                cfpb
+                                Consumers
                             </a>
                         </li>
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
-                                cfpb
+                                College loans
                             </a>
                         </li>
                     </ul>
