--- a/static/css/post.less
+++ b/static/css/post.less
@@ -341,6 +341,7 @@
     .u-respond-to-min(769px, {
         .u-right();
         width: unit(250px / @base-font-size-px, em);
+        margin-top: unit(5px / @base-font-size-px, em);
         margin-left: unit(@gutter-width / @base-font-size-px, em);
     });
 }
